1. updated Doctor.ts file to contain every field as per table 2. added DoctorRepository.java, DoctorService.java 3. post request now saves data into h2 database

--- a/CHL-Backend/src/main/resources/application.properties
+++ b/CHL-Backend/src/main/resources/application.properties
@@ -15,6 +15,6 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
 #server.port = 8080
 
-spring.security.user.name=Nawaz
+spring.security.user.name=nawaz2000
 spring.security.user.password=123
 
