--- a/CHL-Backend/src/main/resources/application.properties
+++ b/CHL-Backend/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 #server.port = 8080
 
 spring.security.user.name=nawaz2000
