--- a/CHL-Backend/pom.xml
+++ b/CHL-Backend/pom.xml
@@ -26,7 +26,12 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 			<version>2.3.3.RELEASE</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/com.github.ulisesbocchio/jasypt-spring-boot-starter -->
+		<dependency>
+			<groupId>com.github.ulisesbocchio</groupId>
+			<artifactId>jasypt-spring-boot-starter</artifactId>
+			<version>3.0.4</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.twilio.sdk</groupId>
@@ -88,6 +93,11 @@
 						</exclude>
 					</excludes>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.github.ulisesbocchio</groupId>
+				<artifactId>jasypt-maven-plugin</artifactId>
+				<version>3.0.4</version>
 			</plugin>
 		</plugins>
 	</build>
