--- a/CHL-Frontend/package.json
+++ b/CHL-Frontend/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@syncfusion/ej2-angular-charts": "^20.3.58",
+    "@syncfusion/ej2-ng-charts": "^16.2.50",
     "chart.js": "^4.0.1",
     "ng2-charts": "^4.0.2",
     "rxjs": "~7.5.0",
