backend from last commit

--- a/CHL-Backend/src/main/resources/application.properties
+++ b/CHL-Backend/src/main/resources/application.properties
@@ -1,15 +1,16 @@
+spring.jpa.show-sql=true
+server.error.include-message=ALWAYS
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+server.forward-headers-strategy=framework
+# For FileBased Storage : Persist data even after closing the app
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 # Datasource
-spring.datasource.url=jdbc:h2:mem:chl
+spring.datasource.url=jdbc:h2:file:./chl
 spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.password=password
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
 server.port = 8080
-#
-spring.security.user.name=nawaz2000
-spring.security.user.password=123
