1. new entity Prescription created in spring 2. controller, service, repo created, post new multipart prescription now works 3. download add record form as pdf now works

--- a/CHL-Backend/src/main/resources/application.properties
+++ b/CHL-Backend/src/main/resources/application.properties
@@ -16,3 +16,7 @@ twilio.from_number=ENC(/T7NiiwZI+3udiBPIBGspABeujDIyh6u9V1yyCNBb+BrxHYNbGx7wMG8J
 #
 spring.security.user.name=nawaz2000
 spring.security.user.password=123
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=30000KB
+spring.servlet.multipart.max-request-size=30000KB
